src/objects/OPROARTS020__OproartsUser__c.object
<CustomObject>
    <customHelpPage>OPROARTS020__OproartsHelp</customHelpPage>
    <fields>
        <fullName>OPROARTS020__Oproarts__c</fullName>
        <label>OPROARTS</label>
        <referenceTo>OPROARTS020__Oproarts__c</referenceTo>
        <relationshipLabel>OPROARTS User</relationshipLabel>
        <relationshipName>OproartsUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OPROARTS020__UID__c</fullName>
        <label>UID</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPROARTS020__UPW__c</fullName>
        <label>UPW</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPROARTS020__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OproartsUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OPROARTSユーザ</label>
    <nameField>
        <label>OPROARTS User</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>